force-app/main/default/objects/FSL_Company__c/FSL_Company__c.object-meta.xml
<CustomObject>
    <description>FSL_Companies</description>
    <label>FSL Company</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>