force-app/main/default/objects/FSL_Company__c/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <description>Igloo Company Priority setting</description>
    <inlineHelpText>The value in this field comes from IGLOO</inlineHelpText>
    <label>Account Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>