force-app/main/default/objects/FSL_Company__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>BGT</fullName>
            </value>
            <value>
                <fullName>BRA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CHE</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>DEU</fullName>
            </value>
            <value>
                <fullName>DNK</fullName>
            </value>
            <value>
                <fullName>ECT</fullName>
            </value>
            <value>
                <fullName>ESP</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>FRA</fullName>
            </value>
            <value>
                <fullName>GBR</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>IMN</fullName>
            </value>
            <value>
                <fullName>IMT</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>IRL</fullName>
            </value>
            <value>
                <fullName>ITA</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>MYS</fullName>
            </value>
            <value>
                <fullName>NOR</fullName>
            </value>
            <value>
                <fullName>NZL</fullName>
            </value>
            <value>
                <fullName>SGP</fullName>
            </value>
            <value>
                <fullName>SNC</fullName>
            </value>
            <value>
                <fullName>SWE</fullName>
            </value>
            <value>
                <fullName>TAU</fullName>
            </value>
            <value>
                <fullName>TCA</fullName>
            </value>
            <value>
                <fullName>TCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>