force-app/main/default/objects/FSL_Company__c/fields/Exclude_From_Reports__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Reports</label>
    <type>Checkbox</type>
</CustomField>