force-app/main/default/objects/FSL_Company__c/fields/FT_AL_Required__c.field-meta.xml
<CustomField>
    <fullName>FT_AL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FT AL Required</label>
    <type>Checkbox</type>
</CustomField>