force-app/main/default/objects/FSL_Company__c/fields/New_90_Day__c.field-meta.xml
<CustomField>
    <fullName>New_90_Day__c</fullName>
    <formula>CreatedDate + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New 90 Day</label>
    <type>Date</type>
</CustomField>