force-app/main/default/objects/FSL_Company__c/fields/Priority1_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Priority1_Adjustment__c</fullName>
    <formula>IF(
    Priority_1_Account__c
,
    Company_Priority__c
,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority1 Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>