force-app/main/default/objects/FSL_Company__c/fields/Priority_1_Account__c.field-meta.xml
<CustomField>
    <fullName>Priority_1_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority 1 Account</label>
    <type>Checkbox</type>
</CustomField>