force-app/main/default/objects/FSL_Company__c/fields/RT_CommLine_Account__c.field-meta.xml
<CustomField>
    <fullName>RT_CommLine_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RT CommLine Account</label>
    <type>Checkbox</type>
</CustomField>