force-app/main/default/objects/FSL_Company__c/fields/VIP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>VIP_Expiration_Date__c</fullName>
    <label>VIP Expiration Date</label>
    <type>Date</type>
</CustomField>